--- a/templates/audio1.html
+++ b/templates/audio1.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a href="./audio2"><button id="next">Dalej</button></a>
+<a href="./audio2" class="btn btn-primary btn-lg active" role="button">Dalej</a>
 
 {% endblock %}
