--- a/templates/audio4.html
+++ b/templates/audio4.html
@@ -15,5 +15,5 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a href="./audio5"><button id="next">Dalej</button></a>
+<a href="./audio5" class="btn btn-primary btn-lg active" role="button">Dalej</a>
 {% endblock %}
