--- a/templates/audio6.html
+++ b/templates/audio6.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a href="./thanks"><button id="next">Dalej</button></a>
+<a href="./thanks" class="btn btn-primary btn-lg active" role="button">Dalej</a>
 
 {% endblock %}
