--- a/templates/EN/audio2.html
+++ b/templates/EN/audio2.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a href="./audio3"><button id="next">Next</button></a>
+<a href="./audio3" class="btn btn-primary btn-lg active" role="button">Next</a>
 
 {% endblock %}
