--- a/templates/EN/audio4.html
+++ b/templates/EN/audio4.html
@@ -16,5 +16,5 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a href="./audio5"><button id="next">Next</button></a>
+<a href="./audio5" class="btn btn-primary btn-lg active" role="button">Next</a>
 {% endblock %}
