--- a/templates/EN/audio5.html
+++ b/templates/EN/audio5.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a href="./audio6"><button id="next">Next</button></a>
+<a href="./audio6" class="btn btn-primary btn-lg active" role="button">Next</a>
 
 {% endblock %}
