--- a/templates/EN/audio6.html
+++ b/templates/EN/audio6.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a href="./thanks"><button id="next">Next</button></a>
+<a href="./thanks" class="btn btn-primary btn-lg active" role="button">Next</a>
 
 {% endblock %}
