--- a/templates/audio2.html
+++ b/templates/audio2.html
@@ -15,6 +15,6 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a href="./audio3"><button id="next">Dalej</button></a>
+<a href="./audio3" class="btn btn-primary btn-lg active" role="button">Dalej</a>
 
 {% endblock %}
