--- a/templates/EN/audio1.html
+++ b/templates/EN/audio1.html
@@ -16,7 +16,7 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a href="./audio2" class="btn btn-primary btn-lg active" role="button">Next</a>
+<a id="next" href="./audio2" class="btn btn-primary btn-lg active" role="button">Next</a>
 <!--<button id="next"></button>-->
 
 {% endblock %}
