--- a/templates/EN/audio3.html
+++ b/templates/EN/audio3.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a href="./audio4" class="btn btn-primary btn-lg active" role="button">Next</a>
+<a id="next" href="./audio4" class="btn btn-primary btn-lg active" role="button">Next</a>
 
 {% endblock %}
