--- a/templates/audio6.html
+++ b/templates/audio6.html
@@ -16,6 +16,6 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a id="next" href="./thanks" class="btn btn-primary btn-lg active" role="button">Dalej</a>
+<a id="next" onclick='sendData()' href="./thanks" class="btn btn-primary btn-lg active" role="button">Dalej</a>
 
 {% endblock %}
