--- a/templates/EN/audio4.html
+++ b/templates/EN/audio4.html
@@ -16,5 +16,5 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a id="next" href="./audio5" class="btn btn-primary btn-lg active" role="button">Next</a>
+<a id="next" onclick='sendData()' href="./audio5" class="btn btn-primary btn-lg active" role="button">Next</a>
 {% endblock %}
