--- a/templates/audio3.html
+++ b/templates/audio3.html
@@ -15,6 +15,6 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a id="next" href="./audio4" class="btn btn-primary btn-lg active" role="button">Dalej</a>
+<a id="next" onclick='sendData()' href="./audio4" class="btn btn-primary btn-lg active" role="button">Dalej</a>
 
 {% endblock %}
