Try to fix problem with Aborting clicking POST request on button

--- a/templates/audio3.html
+++ b/templates/audio3.html
@@ -15,6 +15,5 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a id="next" onclick='sendData()' href="./audio4" class="btn btn-primary btn-lg active" role="button">Dalej</a>
-
+<button id="next" onclick="saveResult('audio4')" class="btn btn-primary btn-lg active">Dalej</button>
 {% endblock %}
