--- a/templates/EN/audio1.html
+++ b/templates/EN/audio1.html
@@ -16,7 +16,5 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a id="next" onclick='sendData()' href="./audio2" class="btn btn-primary btn-lg active" role="button">Next</a>
-<!--<button id="next"></button>-->
-
+<button id="next" onclick="saveResult('en/audio2')" class="btn btn-primary btn-lg active" >Next</button>
 {% endblock %}
