--- a/templates/EN/audio3.html
+++ b/templates/EN/audio3.html
@@ -16,6 +16,5 @@
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
 {% endblock %}
-<a id="next" onclick='sendData()' href="./audio4" class="btn btn-primary btn-lg active" role="button">Next</a>
-
+<button id="next" onclick="saveResult('en/audio4')" class="btn btn-primary btn-lg active">Next</button>
 {% endblock %}
