--- a/templates/audio1.html
+++ b/templates/audio1.html
@@ -16,6 +16,5 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a id="next" onclick='sendData()' href="./audio2" class="btn btn-primary btn-lg active" role="button">Dalej</a>
-
+<button id="next" onclick="saveResult('audio2')" class="btn btn-primary btn-lg active">Dalej</button>
 {% endblock %}
