--- a/templates/audio2.html
+++ b/templates/audio2.html
@@ -15,6 +15,5 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a id="next" onclick='sendData()' href="./audio3" class="btn btn-primary btn-lg active" role="button">Dalej</a>
-
+<button id="next" onclick="saveResult('audio3')" class="btn btn-primary btn-lg active">Dalej</button>
 {% endblock %}
