--- a/templates/audio4.html
+++ b/templates/audio4.html
@@ -15,5 +15,5 @@
 {% block checkboxes %}
   {% include 'checkboxes.html' %}
 {% endblock %}
-<a id="next" onclick='sendData()' href="./audio5" class="btn btn-primary btn-lg active" role="button">Dalej</a>
+<button id="next" onclick="saveResult('audio5')" class="btn btn-primary btn-lg active">Dalej</button>
 {% endblock %}
