English version of audios added

--- a/templates/EN/audio1.html
+++ b/templates/EN/audio1.html
@@ -11,7 +11,7 @@
 <br>
 <input type="button" id="audio_play" value="PLAY audio">
 <audio id="audio">
-  <source src="{{ url_for('static', filename='audio/pomidor_angry.mp3')}}" type="audio/mp3">
+  <source src="{{ url_for('static', filename='audio/tomato_angry.mp3')}}" type="audio/mp3">
 </audio>
 {% block checkboxes %}
   {% include '/EN/checkboxes.html' %}
